kube/todoapp-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: todoapp-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: todoapp-vs
spec:
  hosts:
  - "*"
  gateways:
  - todoapp-gateway
  http:
  - route:
    - destination:
        host: todoapp
        port:
          number: 80
