kube/virtualservice-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: todoapp-destination
spec:
  host: todoapp
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: todoapp-vs
spec:
  hosts:
  - "*"
  gateways:
  - todoapp-gateway
  http:
  - fault:
      delay:
        percentage:
          value: 50.0
        fixedDelay: 5s
    route:
    - destination:
        host: todoapp
        subset: v2
        port:
          number: 80
