kube/virtualservice-route-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: todoapp-dr
spec:
  host: todoapp
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: todoapp-vs
spec:
  hosts:
  - "*"
  gateways:
  - todoapp-gateway
  http:
  - route:
    - destination:
        host: todoapp
        subset: v1
        port:
          number: 80
